--- a/HarmonyBO/HarmonyBO.csproj
+++ b/HarmonyBO/HarmonyBO.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CMSData.cs" />
+    <Compile Include="Commondata.cs" />
+    <Compile Include="pageSpecificData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
