--- a/HarmonyBusinessLayer/HarmonyBusinessLayer.csproj
+++ b/HarmonyBusinessLayer/HarmonyBusinessLayer.csproj
@@ -42,6 +42,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HarmonyBO\HarmonyBO.csproj">
+      <Project>{CBE2B2BF-C344-4F69-A141-48A7E824712F}</Project>
+      <Name>HarmonyBO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
