--- a/HarmonyService/packages.config
+++ b/HarmonyService/packages.config
@@ -20,22 +20,22 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNetCore.Authorization" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNetCore.Authorization" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.Extensions.DependencyModel" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.DependencyModel" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.Extensions.ObjectPool" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.ObjectPool" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
@@ -87,7 +87,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
-  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
