--- a/HarmonyService/HarmonyService.csproj
+++ b/HarmonyService/HarmonyService.csproj
@@ -253,7 +253,10 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <Content Include="Data\data.json" />
+    <Content Include="Data\page1.json" />
+    <Content Include="Data\searchdata.json" />
+    <Content Include="Data\page3.json" />
+    <Content Include="Data\page2.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
