--- a/HarmonyBusinessLayer/HarmonyBusinessLayer.csproj
+++ b/HarmonyBusinessLayer/HarmonyBusinessLayer.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\HarmonyRepository.cs" />
+    <Compile Include="Services\IHarmony.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HarmonyBO\HarmonyBO.csproj">
