--- a/HarmonyService/HarmonyService.csproj
+++ b/HarmonyService/HarmonyService.csproj
@@ -229,9 +229,12 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Images\1.png" />
     <Content Include="Images\10.png" />
     <Content Include="Images\11.png" />
+    <Content Include="Images\12.png" />
     <Content Include="Images\13.png" />
+    <Content Include="Images\14.png" />
     <Content Include="Images\2.png" />
     <Content Include="Images\3.png" />
     <Content Include="Images\4.png" />
@@ -241,6 +244,7 @@
     <Content Include="Images\8.png" />
     <Content Include="Images\9.png" />
     <Content Include="Images\flag.png" />
+    <Content Include="Images\harmony-trans-bkg-green.png" />
     <Content Include="Images\learn.png" />
     <Content Include="Images\V2-Solutions.jpg" />
     <Content Include="Scripts\bootstrap.js" />
