--- a/HarmonyService/HarmonyService.csproj
+++ b/HarmonyService/HarmonyService.csproj
@@ -268,11 +268,27 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
-    <Content Include="Data\page1.json" />
+    <Content Include="Data\Home.json" />
     <Content Include="Data\searchdata.json" />
-    <Content Include="Data\page3.json" />
-    <Content Include="Data\page2.json" />
-    <Content Include="Data\page4.json" />
+    <Content Include="Data\AboutUs.json" />
+    <Content Include="Data\KnowledgeCenter.json" />
+    <Content Include="Data\HowToUseSite.json" />
+    <Content Include="Data\SubPages\WhatsNewPage.json" />
+    <Content Include="Data\SubPages\Adult Abuse.json" />
+    <Content Include="Data\SubPages\Healthcare.json" />
+    <Content Include="Data\SubPages\Home.json" />
+    <Content Include="Data\SubPages\Information.json" />
+    <Content Include="Data\SubPages\Legal.json" />
+    <Content Include="Data\SubPages\Senior.json" />
+    <Content Include="Data\SubPages\Support.json" />
+    <Content Include="Data\SubPages\Intellectual.json" />
+    <Content Include="Data\SubPages\Veterans.json" />
+    <Content Include="Data\SubPages\Alzheimer.json" />
+    <Content Include="Data\SubPages\Behavioral.json" />
+    <Content Include="Data\SubPages\Emergency.json" />
+    <Content Include="Data\SubPages\Everyday.json" />
+    <Content Include="Data\SubPages\Financial.json" />
+    <Content Include="Data\SubPages\Grandparents.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
